--- a/app/templates/yearly_report.html
+++ b/app/templates/yearly_report.html
@@ -5,8 +5,8 @@
 3. add border to graph
 TODO: actually I want border to all non-card content
 -->
-<div class="row justify-content-center">
-  <h1>Yearly Report</h1>
+<div class="text-center mt-2 mb-5">
+  <h1 class="display-4">Yearly Report</h1>
 </div>
 <canvas id="lineChart" width="700" height="400"></canvas>
 <script>
