--- a/app/templates/add_attendance.html
+++ b/app/templates/add_attendance.html
@@ -1,37 +1,42 @@
 {% extends "layout.html" %} {% block content %}
-<div class="content-section">
-  <form method="POST" action="">
-    {{ form.csrf_token }}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-b">{{ legend }}</legend>
-      <div class="form-group">
-        {{ form.class_id.label(class="form-control-label") }} {% if
-        form.class_id.errors %} {{ form.class_id(class="form-control
-        from-crontrol-lg is-invalid") }}
-        <div class="invalid-feeback">
-          {% for error in form.class_id.errors %}
-          <span>{{ error }}</span>
-          {% endfor %}
-        </div>
-        {% else %} {{ form.class_id(class="form-control from-crontrol-lg") }} {%
-        endif %}
-      </div>
-      <div class="form-group">
-        {{ form.date_attended.label(class="form-control-label") }} {% if
-        form.date_attended.errors %} {{ form.date_attended(class="form-control
-        from-crontrol-lg is-invalid") }}
-        <div class="invalid-feeback">
-          {% for error in form.date_attended.errors %}
-          <span>{{ error }}</span>
-          {% endfor %}
-        </div>
-        {% else %} {{ form.date_attended(class="form-control from-crontrol-lg")
-        }} {% endif %}
-      </div>
-    </fieldset>
-    <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info") }}
-    </div>
-  </form>
+<div class="row text-center mt-2">
+  <h1 class="display-6">New Attendance</h1>
 </div>
-{% endblock content %}
+<div class="row justify-content-center">
+  <div class="col-6">
+    <form method="POST" action="">
+      {{ form.csrf_token }}
+      <fieldset class="mb-3">
+        <div class="mb-3">
+          {{ form.class_id.label(class="form-label") }} {% if
+          form.class_id.errors %} {{ form.class_id(class="form-control
+          from-crontrol-lg is-invalid") }}
+          <div class="invalid-feeback">
+            {% for error in form.class_id.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.class_id(class="form-control from-crontrol-lg") }}
+          {% endif %}
+        </div>
+        <div class="mb-3">
+          {{ form.date_attended.label(class="form-label") }} {% if
+          form.date_attended.errors %} {{ form.date_attended(class="form-control
+          from-crontrol-lg is-invalid") }}
+          <div class="invalid-feeback">
+            {% for error in form.date_attended.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.date_attended(class="form-control
+          from-crontrol-lg") }} {% endif %}
+        </div>
+      </fieldset>
+      <div class="form-group">
+        {{ form.submit(class="btn btn-current") }}
+      </div>
+    </form>
+  </div>
+  {% endblock content %}
+  </div>
+</div>
