--- a/app/templates/upload_csv.html
+++ b/app/templates/upload_csv.html
@@ -44,9 +44,7 @@
   <div class="card card-body">
     <ul>
       <li>File Type: .csv</li>
-      <li>
-        Headers:class_name, attendance_date<i>(format: yyyy-mm-dd)</i></span>
-      </li>
+      <li>Headers:class_name, attendance_date<i>(format: yyyy-mm-dd)</i></li>
     </ul>
   </div>
 </div>
@@ -68,15 +66,4 @@
     <button class="btn btn-current mt-5">Upload</button>
   </form>
 </div>
-<!-- <div class="row mt-5 justify-content-center">
-  <form
-    action="/upload"
-    method="POST"
-    enctype="multipart/form-data"
-    class="form-group">
-    <label for="file"> File: </label>
-    <input type="file" id="file" name="file" />
-    <button class="btn btn-current">Upload</button>
-  </form>
-</div> -->
 {% endblock content %}
