--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -157,6 +157,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"></script>
-    <script src="../static/js/lightmode.js"></script>
+    <script src="{{url_for('static', filename='/js/lightmode.js') }}"></script>
   </body>
 </html>
