--- a/app/templates/monthly_report.html
+++ b/app/templates/monthly_report.html
@@ -2,34 +2,11 @@
 <div class="text-center mt-2 mb-5">
   <h1 class="display-4">Monthly Report</h1>
 </div>
-s<canvas id="lineChart" width="700" height="400"></canvas>
-<script>
-  var ctx = document.getElementById("lineChart").getContext("2d");
-  var myChart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-          labels: {{ labels | safe }},
-  datasets: [{
-      label: 'Attendances',
-      data: {{ values | safe }},
-      backgroundColor: [
-      'rgba(50, 205, 50, 0.5)'
-  ],
-      borderColor: [
-      'rgba(255, 255, 255, 1)'
-  ],
-      borderWidth: 1
-  }]
-      },
-  options: {
-      scales: {
-          yAxes: [{
-              ticks: {
-                  beginAtZero: true
-              }
-          }]
-      }
-  }
-  });
+<canvas id="monthlyReport" width="700" height="400"></canvas>
+<script src="{{ url_for('static', filename='js/report.js') }}"></script>
+<script type="text/javascript">
+  labels = {{ labels|tojson|safe }};
+  values = {{ values|tojson|safe }};
+  reportId = "monthlyReport";
 </script>
 {% endblock content %}
