closes #37: account page with update functionality

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -228,3 +228,10 @@ main {
 .class-link {
   color: var(--secondary-color);
 }
+
+.profile-pic {
+  height: 125px;
+  width: 125px;
+  margin-right: 20px;
+  margin-bottom: 16px;
+}
