reset_password_request

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,7 +36,11 @@
         </div>
       </fieldset>
       <div class="mb-3 mt-5">{{ form.submit(class="btn btn-current") }}</div>
-      <small class="text-muted ml2"><a href="#">Forgot Password?</a></small>
+      <small class="text-muted ml2"
+        ><a href="{{ url_for('users.reset_password_request') }}"
+          >Forgot Password?</a
+        ></small
+      >
     </form>
   </div>
 </div>
