--- a/app/templates/reset_password_request.html
+++ b/app/templates/reset_password_request.html
@@ -1,31 +1,27 @@
 {% extends "layout.html" %} {% block content %}
-<div class="container-fluid">
-  <form method="POST" action="">
-    {{ form.hidden_tag() }}
-    <fieldset class="form_group">
-      <legend class="border-bottom mb-4">Request Reset</legend>
-      <div class="form-group">
-        {{ form.email.label(class="form-control-label") }} {% if
-        form.email.errors %} {{ form.email(class="form-control form-control-lg
-        is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.email.errors %}
-          <span>{{ error }}</span>
-          {% endfor %}
-        </div>
-        {% else %} {{ form.email(class="form-control form-control-lg") }} {%
-        endif %}
-      </div>
-    </fieldset>
-    <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info") }}
-    </div>
-  </form>
+<div class="row text-center mt-2">
+  <h1 class="display-6">Request Password Reset</h1>
 </div>
-<div class="border-top pt-3">
-  <small class="text-muted"
-    >Need an account?
-    <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up Now!</a>
-  </small>
+<div class="row justify-content-center mt-3">
+  <div class="col-6">
+    <form method="POST" action="">
+      {{ form.hidden_tag() }}
+      <fieldset class="form_group">
+        <div class="mb-3">
+          {{ form.email.label(class="form-control-label") }} {% if
+          form.email.errors %} {{ form.email(class="form-control form-control-lg
+          is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.email(class="form-control form-control-lg") }} {%
+          endif %}
+        </div>
+      </fieldset>
+      <div class="mb-3">{{ form.submit(class="btn btn-current") }}</div>
+    </form>
+  </div>
 </div>
 {% endblock content %}
