--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,40 +1,40 @@
-{% extends "layout.html" %}
-{% block content %}
-<div class="container-fluid">
+{% extends "layout.html" %} {% block content %}
+<div class="row text-center mt-2">
+  <h1 class="display-6">Reset Password</h1>
+</div>
+<div class="row justify-content-center">
+  <div class="col-6">
     <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset class="form_group">
-            <legend class="border-bottom mb-4">Reset your password</legend>
-            <div class="form-group">
-                {{ form.password.label(class="form-control-label") }}
-                {% if form.password.errors %}
-                {{ form.password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.password.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.password(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.confirm_password.label(class="form-control-label") }}
-                {% if form.confirm_password.errors %}
-                {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.confirm_password.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.confirm_password(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-        </fieldset>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info") }}
+      {{ form.hidden_tag() }}
+      <fieldset class="mb-3">
+        <div class="mb-3">
+          {{ form.password.label(class="form-label") }} {% if
+          form.password.errors %} {{ form.password(class="form-control
+          form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.password(class="form-control form-control-lg") }}
+          {% endif %}
         </div>
+        <div class="mb-3">
+          {{ form.confirm_password.label(class="form-label") }} {% if
+          form.confirm_password.errors %} {{
+          form.confirm_password(class="form-control form-control-lg is-invalid")
+          }}
+          <div class="invalid-feedback">
+            {% for error in form.confirm_password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.confirm_password(class="form-control
+          form-control-lg") }} {% endif %}
+        </div>
+      </fieldset>
+      <div class="mb-3 mt-5">{{ form.submit(class="btn btn-current") }}</div>
     </form>
+  </div>
 </div>
 {% endblock content %}
